--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -3,12 +3,43 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginActivity" >
-
-    <TextView
-        android:layout_width="wrap_content"
+    
+    <ViewFlipper android:id="@+id/flipper"
+		android:layout_width="match_parent" android:layout_height="wrap_content"
+		android:flipInterval="2000" android:layout_marginBottom="20dip">
+		<TextView android:layout_width="match_parent"
+			android:layout_height="wrap_content" android:gravity="center_horizontal"
+			android:textSize="26sp" android:text="@string/animation_string1" />
+		<TextView android:layout_width="match_parent"
+			android:layout_height="wrap_content" android:gravity="center_horizontal"
+			android:textSize="26sp" android:text="@string/animation_string2" />
+	</ViewFlipper>
+	
+    <EditText
+        android:id="@+id/email"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/hello_world" />
+        android:hint="@string/email_prompt"
+        android:inputType="textEmailAddress" 
+        android:layout_below="@id/flipper"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"/>
+    
+    <EditText 
+        android:id="@+id/password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="@string/password_prompt"
+        android:inputType="textPassword"
+        android:layout_below="@id/email"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"/>
+    
+    <Button
+                android:id="@+id/sign_in_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/sign_in_button"
+                android:layout_below="@id/password" />
 
 </RelativeLayout>
