--- a/res/layout/navtabs.xml
+++ b/res/layout/navtabs.xml
@@ -1,65 +1,21 @@
-<TabHost android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:id="@+id/tabHost"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    >
-    <TabWidget
+<?xml version="1.0" encoding="utf-8"?>
+<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@android:id/tabhost"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:id="@android:id/tabs"
-    />
-     <FrameLayout
-     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:id="@android:id/tabcontent"
-     >
-     <LinearLayout
-     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/tab1"
-    android:orientation="vertical"
-    android:paddingTop="60px"
-     >
-     <TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="100px" 
-    android:text="This is tab1"
-    android:id="@+id/txt1"
-    />    
-    
-     </LinearLayout>
-     
-     <LinearLayout
-     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:id="@+id/tab2"
-    android:orientation="vertical"
-    android:paddingTop="60px"
-     >
-     <TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="100px" 
-    android:text="This is tab 2"
-    android:id="@+id/txt2"
-    />
-   
-     </LinearLayout>
-     
-      <LinearLayout
-     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:id="@+id/tab3"
-    android:orientation="vertical"
-    android:paddingTop="60px"
-     >
-     <TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="100px" 
-    android:text="This is tab 3"
-    android:id="@+id/txt3"
-    />
-   
-     </LinearLayout>
-     </FrameLayout>
-    
-    </TabHost>
+    android:layout_height="fill_parent">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:padding="5dp">
+        <TabWidget
+            android:id="@android:id/tabs"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+        <FrameLayout
+            android:id="@android:id/tabcontent"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:padding="5dp" />
+    </LinearLayout>
+</TabHost>
